force-app/main/default/objects/general_message__e/general_message__e.object-meta.xml
<CustomObject>
    <description>Show general messages about what&#39;s happening on the platform</description>
    <label>general message</label>
    <pluralLabel>general messages</pluralLabel>
</CustomObject>