force-app/main/default/objects/general_message__e/fields/category_2__c.field-meta.xml
<CustomField>
    <fullName>category_2__c</fullName>
    <label>category 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>