force-app/main/default/objects/general_message__e/fields/category_3__c.field-meta.xml
<CustomField>
    <fullName>category_3__c</fullName>
    <label>category 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>