force-app/main/default/objects/general_message__e/fields/icon_2__c.field-meta.xml
<CustomField>
    <fullName>icon_2__c</fullName>
    <label>icon 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>