force-app/main/default/objects/general_message__e/fields/image_resource_name__c.field-meta.xml
<CustomField>
    <fullName>image_resource_name__c</fullName>
    <label>image resource name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>