force-app/main/default/objects/general_message__e/fields/record_id_3__c.field-meta.xml
<CustomField>
    <fullName>record_id_3__c</fullName>
    <label>record id 3</label>
    <length>18</length>
    <type>Text</type>
</CustomField>