force-app/main/default/objects/general_message__e/fields/record_name_3__c.field-meta.xml
<CustomField>
    <fullName>record_name_3__c</fullName>
    <label>record name 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>